add sql string query to get and getlist methods.

--- a/Dapper.SimpleCRUD NET45/Dapper.SimpleCRUD NET45.csproj
+++ b/Dapper.SimpleCRUD NET45/Dapper.SimpleCRUD NET45.csproj
@@ -26,11 +26,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Release\Net-4.5-Async\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Dapper.SimpleCRUD.XML</DocumentationFile>
+    <DocumentationFile>..\Release\Net-4.5-Async\Dapper.SimpleCRUD.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper">
