--- a/Dapper.SimpleCRUD/Dapper.SimpleCRUD.csproj
+++ b/Dapper.SimpleCRUD/Dapper.SimpleCRUD.csproj
@@ -43,11 +43,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Release\Net-4.0\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Dapper.SimpleCRUD.XML</DocumentationFile>
+    <DocumentationFile>..\Release\Net-4.0\Dapper.SimpleCRUD.XML</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
