--- a/Dapper.SimpleCRUD NET45/Dapper.SimpleCRUD NET45.csproj
+++ b/Dapper.SimpleCRUD NET45/Dapper.SimpleCRUD NET45.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="Dapper">
       <HintPath>..\packages\Dapper.1.38\lib\net45\Dapper.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
