--- a/Dapper.SimpleCRUD/Dapper.SimpleCRUD.csproj
+++ b/Dapper.SimpleCRUD/Dapper.SimpleCRUD.csproj
@@ -54,6 +54,7 @@
     <Reference Include="Dapper, Version=1.38.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Dapper.1.38\lib\net40\Dapper.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
